syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.pix";
option java_outer_classname = "grpc";
option objc_class_prefix = "HLW";

package br.com.zup.pix;

service DesafioPixService {

  rpc cadastraChave(ChavePixRequest) returns (ChavePixResponse) {}
}

enum TipoDeChave {
  DEFAULT_CHAVE = 0;
  CPF = 1;
  TELEFONE = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}
enum TipoDeConta{
  DEFAULT_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message ChavePixRequest {
  string codigoInterno = 1;
  TipoDeChave tipoDeChave = 2;
  string valorDaChave = 3;
  TipoDeConta tipoDeConta = 4;
}

message ChavePixResponse {
  string clientId = 1;
  string chaveId = 2;
}

message DesafioPixRequest {
  string name = 1;
}

message DesafioPixReply {
  string message = 1;
}